--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfils em Redes Sociais</title>
+    <link rel="stylesheet" href="favicon.ico" type="image/x-icon">
+    <title>Social</title>
 </head>
 <body>
     <h1>Meus Perfis nas Redes Sociais</h1>
     <h2>Quem sou eu?</h2>
+    <img src="perfil2.jpg" alt="Imagem do Perfil">
+    <p>Meu nomé é <strong>Olmir Junior</strong>, sou Engenheiro Civil desde 2012 e atualmente estou estudando programação e desevolvimento de sites/aplicações. Segue abaixo as minhas redes sociais.</p>
+    <h2>Como falar comigo?</h2>
+    <ul>
+        <li><img src="icone-facebook.png" alt="logo Facebook"><a href="http://www.facebook.com/olmirjunior" target="_blank" rel="external">/olmirjunior</a> - Me acompanha lá no Facebook</li>
+        <li><img src="icone-github.png" alt="logo GitHub"><a href="https://github.com/olmirjunior" target="_blank" rel="external">/olmirjunior</a> - Acesse meu repositório público no GitHub</li>
+        <li><img src="icone-instagram.png" alt="logo Instagram"><a href="http://www.instagram.com/olmirjunior" target="_blank" rel="external">/olmirjunior</a> - Me segue lá no Instagram</li>
+        <li><img src="icone-linkedin.png" alt="Logo icone-linkedin"><a href="http://www.linkedin.com/in/olmir-junior-77089363/" target="_blank" rel="external">/olmirjunior</a> - Me adiciona lá no Linkedin</li>
+    </ul>
 </body>
 </html>
