--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Social</title>
 </head>
 <body>
-    <h1>Meus Perfis nas Redes Sociais</h1>
+    <h1>Minhas Redes Sociais</h1>
     <h2>Quem sou eu?</h2>
     <img src="perfil2.jpg" alt="Imagem do Perfil">
     <p>Meu nomé é <strong>Olmir Junior</strong>, sou Engenheiro Civil desde 2012 e atualmente estou estudando programação e desevolvimento de sites/aplicações. Segue abaixo as minhas redes sociais.</p>
